# cargo-nextest-knapsack

./: .mergify.yml  Cargo.toml  Justfile  README.md  renovate.json
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yaml  rust.yml
src/: knapsack_client.rs  main.rs  models.rs  test_context.rs  test_finder.rs  test_runner.rs
src/ci_providers/: ci_provider_base.rs  ci_provider_wrapper.rs  github_actions.rs  mod.rs
tests/: e2e_tests.rs
tests/projects/project/: Cargo.toml
tests/projects/project/some_crate/: Cargo.toml
tests/projects/project/some_crate/src/: main.rs
tests/projects/project/some_crate/tests/: tests.rs
tests/projects/project/src/: main.rs
tests/projects/project/src/dir/: file.rs
tests/projects/project/tests/: tests.rs
