[package]
name = "cargo-nextest-knapsack"
version = "0.0.0-NIGHTLY-86626f5"
edition = "2021"
repository = "https://github.com/andrzejressel/cargo-nextest-knapsack"

[dependencies]
nextest-metadata = "0.12.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
httpmock = "0.7.0"
serial_test = "3.1.1"
